change lineheight on comment tooltip

--- a/src/pages/read/read.scss
+++ b/src/pages/read/read.scss
@@ -44,6 +44,9 @@ page-read {
       white-space: normal;
       max-width: 400px;
       text-align: left;
+      p {
+      line-height: 22px;
+      }
     }
 
 	.segment-header{
